fix: visible doppelganger icon

--- a/react_main/src/css/roles.css
+++ b/react_main/src/css/roles.css
@@ -1357,7 +1357,7 @@
   background-image: url("/images/roles/fatalist-vivid.png");
 }
 
-.role-icon-scheme-vivid .role-Mafia-Döppelganger {
+.role-icon-scheme-vivid .role-Mafia-Doppelgänger {
   background-image: url("/images/roles/doppelganger-vivid.png");
 }
 
